Added chunking for IoBuffer output. Refactored client id handling and manager registration. Updated connection creation flow.
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@4572 1b6495e4-3631-0410-8e05-8f51eee8b9cc